--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "react-icons": "^3.10.0",
     "react-loader-spinner": "^3.1.14",
     "react-paystack": "^3.0.1",
+    "react-promise-tracker": "^2.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-spinners": "^0.9.0",
     "store": "^2.0.12"
   },
   "scripts": {
