--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
     "react-loader-spinner": "^3.1.14",
+    "react-number-format": "^4.4.1",
     "react-paystack": "^3.0.1",
     "react-promise-tracker": "^2.1.0",
     "react-router-dom": "^5.2.0",
